fix: align login page layout to match Figma design

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -4,15 +4,16 @@
   display: flex;
   height: 100vh;
   width: 100%;
+  align-items: stretch;
 
   &__left {
+    position: relative;
     width: 50%;
-    height: 100vh;
     background: $bg-white;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: flex-start;
     padding: 40px;
 
     @media (max-width: 768px) {
@@ -21,9 +22,9 @@
   }
 
   &__logo {
-    align-self: flex-start;
-    padding-left: 100px;
-    padding-top: 60px;
+    position: absolute;
+    top: 80px;
+    left: 76px;
     img {
       width: 174px;
       height: 36px;
@@ -31,6 +32,7 @@
   }
 
   &__illustration {
+    width: 100%;
     flex: 1;
     display: flex;
     align-items: center;
@@ -100,7 +102,7 @@
         border-color: $primary;
       }
     }
-    &--pasword input {
+    &--password input {
       padding-right: 70px;
     }
   }
